--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manit ระบบ บันทึกการผลิต น้ำแข็ง ก้อน/โม่</title>
+    <title>Point of Sale : Front Factory</title>
 </head>
 <body>
-    <iframe style="width: 100%; height: 100vh;" scrolling="yes" src="https://script.google.com/macros/s/AKfycbxp4wEzR0SOeS90GQyGqg4shuVmN9Cu5iyK6z2RekWS_1NBQu57CbUOEUHt6_mE0sEo/exec" frameborder="0"></iframe>
+    <iframe style="width: 100%; height: 100vh;" scrolling="yes" src="https://script.google.com/macros/s/AKfycbynoB8W7AEDFY_Lj1wi3bfRtSHdfdyKcf_9RcpsnF2V4mahnCOJMXB_a1_109dqyScijA/exec" frameborder="0"></iframe>
 </body>
 </html>
